Added Describable interface for presentation means